--- a/Slack-statistics/index.html
+++ b/Slack-statistics/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Statistics Slack</title>
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
 
@@ -39,40 +39,7 @@
 	</div>
 </div>
 
-<script type="text/javascript">
-
-	let contagem = function(max,element){
-
-		let contador = 0;
-
-		let count_up = setInterval(function(){
-			
-			if (contador < parseInt(max)){
-
-				if ( (max - contador) < 10){
-					contador += (max - contador);
-				}else{
-					contador += 10;	
-				}
-
-				element.textContent = contador;
-
-			}else{
-				clearInterval(count_up);
-			}
-
-		},90);
-
-	}
-
-	const numbers = document.querySelectorAll('.data-number');
-
-	//Refactor to one "function lib like" using objects
-    contagem(numbers[0].textContent,numbers[0]);
-	contagem(numbers[1].textContent,numbers[1]);
-	contagem(numbers[2].textContent,numbers[2]);
-
-</script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
