--- a/Product-workflow/index.html
+++ b/Product-workflow/index.html
@@ -12,8 +12,18 @@
 </head>
 <body>
 
+<div class="modal-item">
+	<h1 class="titulo-container">CADASTRAR PRODUTO</h1>
+
+	<div class="icon-close">
+		<div data-icon="ei-close-o" data-size="s"></div>	
+	</div>
+	
+</div>
+
+
 <div class="container-produtos">
-	<div class="titulo-container">LISTA DE PRODUTOS</div>
+	<h1 class="titulo-container">LISTA DE PRODUTOS</h1>
 
 	<div class="container-inputs">
 
@@ -23,7 +33,7 @@
 		</div>
 
 		<div class="container-add">
-			<button class="btn btn-medium">Adicionar produto</button>
+			<button class="btn btn-medium add-product-js">Adicionar produto</button>
 		</div>
 
 	</div>
@@ -114,6 +124,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/evil-icons/1.9.0/evil-icons.min.js"></script>
+
 <script type="text/javascript">
 
 	checkbox = document.querySelectorAll("input[type=checkbox");
@@ -149,5 +160,24 @@
 	});
 </script>
 
+<script type="text/javascript">
+	
+	btn_add = document.querySelector(".add-product-js");
+	modal = document.querySelector(".modal-item");
+
+	btn_add.addEventListener("click",function(event){
+		modal.classList.add("modal-visible");
+	});
+
+</script>
+
+<script type="text/javascript">
+	icon_close = document.querySelector(".icon-close");
+	modal = document.querySelector(".modal-item");
+
+	icon_close.addEventListener("click",function(event){
+		modal.classList.remove("modal-visible");
+	})
+</script>
 </body>
 </html>
