Adicionando dados ao modal de detalhes do produto.

--- a/Product-workflow/index.html
+++ b/Product-workflow/index.html
@@ -39,7 +39,7 @@
 
 		<div class="item-form">
 			<input type="" name="" class="input-form" placeholder="categoria">
-			<div data-icon="ei-chevron-down" data-size="s" class="icon-search"></div>
+			<div data-icon="ei-chevron-down" data-size="s" class="icon-align"></div>
 		</div>
 
 		<button class="btn btn-large">Cadastrar</button>
@@ -59,7 +59,50 @@
 	</div>
 
 	<div class="detalhes-produto">
-		
+
+		<div class="item-detalhe">
+			<div class="icon-detalhe">
+				<img src="static/images/produto.png">
+			</div>
+
+			<div class="infos-produto">
+				<p class="titulo-informacao">Produto</p>
+				<p class="valor-informacao">Copo Plástico</p>
+			</div>
+		</div>
+
+		<div class="item-detalhe">
+			<div class="icon-detalhe">
+				<img src="static/images/preco.png">
+			</div>
+
+			<div class="infos-produto">
+				<p class="titulo-informacao">Preço</p>
+				<p class="valor-informacao">R$ 0.30</p>
+			</div>
+		</div>
+
+		<div class="item-detalhe">
+			<div class="icon-detalhe">
+				<img src="static/images/validade.png">
+			</div>
+
+			<div class="infos-produto">
+				<p class="titulo-informacao">Validade</p>
+				<p class="valor-informacao">09/08/2018</p>
+			</div>
+		</div>
+
+		<div class="item-detalhe">
+			<div class="icon-detalhe">
+				<img src="static/images/categoria.png">
+			</div>
+
+			<div class="infos-produto">
+				<p class="titulo-informacao">Categoria</p>
+				<p class="valor-informacao">Cozinha</p>
+			</div>
+		</div>
 	</div>
 	
 </div>
@@ -70,7 +113,7 @@
 	<div class="container-inputs">
 
 		<div class="container-search">
-			<div data-icon="ei-search" data-size="s" class="icon-search"></div>
+			<div data-icon="ei-search" data-size="s" class="icon-align"></div>
 			<input type="text" name="" class="input-search" placeholder="Buscar">
 		</div>
 
