Renovando imagens para aumentar a qualidade.

--- a/Product-workflow/index.html
+++ b/Product-workflow/index.html
@@ -17,9 +17,9 @@
 <div class="modal modal-add-item">
 	<h1 class="titulo-container">CADASTRAR PRODUTO</h1>
 
-	<div class="icon-close">
-		<div data-icon="ei-close-o" data-size="m"></div>	
-	</div>
+		<div class="icon-back add_item">
+			<div data-icon="ei-chevron-left" data-size="m"></div>	
+		</div>
 
 	<form class="form">
 		<div class="item-form">
@@ -50,7 +50,7 @@
 <div class="modal modal-detalhe-item">
 	
 	<div class="container-produto">
-		<div class="icon-back">
+		<div class="icon-back detalhe_item">
 			<div data-icon="ei-chevron-left" data-size="m"></div>	
 		</div>
 
