--- a/Product-workflow/index.html
+++ b/Product-workflow/index.html
@@ -16,7 +16,7 @@
 <div id="app">
 
 <div class="modal modal-add-item">
-	<h1 class="titulo-container">CADASTRAR PRODUTO</h1>
+	<h1 class="titulo-container">{{acao}} produto</h1>
 
 		<div class="icon-back add_item">
 			<div data-icon="ei-chevron-left" data-size="m"></div>	
@@ -29,7 +29,7 @@
 		</div>
 
 		<div class="item-form">
-			<input type="" name="" class="input-form" placeholder="preço" v-model="valor">
+			<input type="" name="" class="input-form" placeholder="preço" v-model="preco">
 			<img src="static/images/preco.png">
 		</div>
 
@@ -43,7 +43,8 @@
 			<div data-icon="ei-chevron-down" data-size="s" class="icon-align"></div>
 		</div>
 
-		<button class="btn btn-large" v-on:click="cadastrar">Cadastrar</button>
+		<button v-if="acao != 'Editar'" class="btn btn-large" v-on:click="cadastrar">Cadastrar</button>
+		<button v-if="acao == 'Editar'" class="btn btn-large" v-on:click="editar">Editar</button>
 
 	</form>
 </div>
@@ -68,7 +69,7 @@
 
 			<div class="infos-produto">
 				<p class="titulo-informacao">Produto</p>
-				<p class="valor-informacao">Copo Plástico</p>
+				<p class="valor-informacao">{{nome}}</p>
 			</div>
 		</div>
 
@@ -79,7 +80,7 @@
 
 			<div class="infos-produto">
 				<p class="titulo-informacao">Preço</p>
-				<p class="valor-informacao">R$ 0.30</p>
+				<p class="valor-informacao"> {{ preco }}</p>
 			</div>
 		</div>
 
@@ -90,7 +91,7 @@
 
 			<div class="infos-produto">
 				<p class="titulo-informacao">Validade</p>
-				<p class="valor-informacao">09/08/2018</p>
+				<p class="valor-informacao">{{validade}}</p>
 			</div>
 		</div>
 
@@ -101,7 +102,7 @@
 
 			<div class="infos-produto">
 				<p class="titulo-informacao">Categoria</p>
-				<p class="valor-informacao">Cozinha</p>
+				<p class="valor-informacao">{{categoria}}</p>
 			</div>
 		</div>
 	</div>
@@ -128,7 +129,11 @@
 
 	<table class="product-list" >
 
-		<thead class="table-header">
+		<tr v-if="produtos.length == 0" class="product-item">
+			<td colspan=6>Tabela não possui dados.</td>
+		</tr>
+
+		<thead class="table-header" v-if="produtos.length > 0">
 			<tr>
 				<td></td>
 				<td>Produto</td>
@@ -139,28 +144,29 @@
 			</tr>
 		</thead>
 
-		<tbody class="table-content" v-for="produto in produtos">
+		<tbody class="table-content">
 
-			<tr class="product-item">
+
+			<tr class="product-item" v-for="produto in produtos">
 				<td>
 					<input type="checkbox" id="checkbox">
 				</td>
 
 				<td>{{produto.nome}}</td>
 				<td>{{produto.categoria}}</td>
-				<td>R$ {{produto.valor}}</td>
+				<td>R$ {{produto.preco}}</td>
 				<td>{{produto.validade}}</td>
 
 				<td class="column-options">
-					<div class="edita_product_js">
+					<div class="edita_product_js" v-on:click="editar(produto)">
 						<div data-icon="ei-pencil" data-size="s"></div>
 					</div>
 
-					<div class="show_produto_js">
+					<div class="show_produto_js" v-on:click="show(produto)">
 						<div data-icon="ei-eye" data-size="s"></div>	
 					</div>
 
-					<div class="deleta_produto_js">
+					<div class="deleta_produto_js" v-on:click="remover(produto)">
 						<div data-icon="ei-trash" data-size="s"></div>	
 					</div>
 					
